0.83.2
  - FAT driver bugs fixed where a newly created zero length
    file combined with a lseek() can corrupt filesytem
    structures (root directory and/or the second FAT table).
    This fixes filesystem corruption when running Windows
    95 install.
  - Enabled printer emulation for non-Windows OSes (Linux,
    Mac OS X, etc.). FreeType2 is required to enable
    printer emulation at compile time.
  - Added config option "drive z is remote" in dosbox-x.conf
    to report drive Z: as a remote (network) drive. It is
    "auto" by default, which will try to prevent SCANDISK.EXE
    from Windows 9x installs to scan and "repair" drive Z:
    which is not backed by a disk filesystem.
  - Fixed clip_key_modifier setting not working when it is
    set to alt, ctrl or shift in the SDL2 build. (Wengier)
  - Sending "Ctrl+Alt+Del" key from the menu will now reset
    the system within DOSBox-X when the intergrated DOS or a
    real DOS booted from a disk image is active. (Wengier)
  - PC speaker output fixed not to timeout and stop rendering
    unless the PC speaker output is not emitting anything
    audible anyway (Fix for Sopwith 1 and 2).
  - Added ALIAS command to define or display aliases.
  - Added -set command-line option to change config options.
    It can be specified multiple times for multiple options,
    overriding any options in the config file. For example,
    the command "dosbox-x.exe -set machine=pc98" will force
    DOSBox-X to start in PC-98 mode. (Wengier)
  - Re-added full drive menu items for the Windows platform.
    The "Boot from drive" item (A:, C: and D: drives only)
    should work in other platforms too. The BOOT command is
    also slightly improved. (Wengier)
  - INT 10h vector now points into VGA BIOS as a workaround
    for DOS programs that use vector location as part of
    their EGA/VGA detection. This fixes blink attribute
    and EGA/VGA detection failure with SuperCalc 3 and